# node

./: .gitignore  Dockerfile  Dockerfile_gpu  Example.ipynb  Makefile  classification.ipynb  cv_node-Copy1.ipynb  cv_node.ipynb  pyproject.toml  regression.ipynb
lib/: arch.py  data.py  model.py  trainer.py
