[tool.poetry]
name = "node"
version = "0.0.0"
description = "node factory"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.6"

numpy="^1.17"
torch="^1.2"
tqdm="^4.36"
scikit_learn=">0.21"
scipy=">1.4"

[tool.poetry.dev-dependencies]
jupyter="1.0.0"
xgboost="0.90"
matplotlib="3.1.1"
wget="3.2"
pandas="0.25.3"
flake8="3.7.9"
qhoptim="1.1.0"
catboost="0.12.2"
prefetch_generator="1.0.1"
requests="2.23.0"
category_encoders="2.2.2"


[build-system]
requires = ["poetry>=0.12"]
build-backend = ["poetry.masonry.api"]

